// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL jhUarP cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-8b8b4437-1 kGIXaj"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL hthoxn"
    >
      <a
        className="sc-bcXGCL ddVvfA cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL gtydaQ cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <div>
    <div
      className="sc-8b8b4437-0 llYgLV"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="sc-8b8b4437-0 kZoRMA"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/login-cas"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="sc-8b8b4437-0 jgExgJ"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `
<div
  className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
/>
`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-8b8b4437-0 bWwkWM"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/login-cas"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-8b8b4437-0 fHfLcH"
      type="facebook"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-facebook"
        />
      </span>
      <a
        href="/login/facebook?_destination=http://localhost/"
        title="facebook"
      >
        Facebook
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL jhUarP cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-8b8b4437-1 kGIXaj"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL hthoxn"
    >
      <a
        className="sc-bcXGCL ddVvfA cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL gtydaQ cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-8b8b4437-0 ftlOUh"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-8b8b4437-0 kZdHzz"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hjoTwp"
  />,
]
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-8b8b4437-0 bXdkVZ"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
]
`;
